# quant-engine

./: .env.example  .gitignore  README.md  config.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  package-lock.json  package.json
api/src/: db.ts  runs.ts  schema.ts  server.ts
cpp/engine/: CMakeLists.txt  config.json
cpp/engine/include/qe/: backtest.hpp  bench.hpp  config.hpp  csv_reader.hpp  data.hpp  equity_io.hpp  indicators.hpp  options.hpp  report.hpp  version.hpp
cpp/engine/src/: backtest.cpp  bench.cpp  config.cpp  csv_reader.cpp  equity_io.cpp  indicators.cpp  main.cpp  metrics.cpp  options.cpp  report.cpp  version.cpp
cpp/engine/tests/: test_backtest.cpp  test_config.cpp  test_indicators.cpp  test_options.cpp  test_report.cpp
data/: sample.csv
db/: schema.md
db/migrations/: init.sql
docs/: architecture.md  quickstart.md
tools/: db_apply_migration.ps1  db_reset.ps1  gen_synth_ohlcv.py
